--- a/frontend/src/app/shared/component/contact-card/contact-card.component.html
+++ b/frontend/src/app/shared/component/contact-card/contact-card.component.html
@@ -71,7 +71,7 @@
         </ng-container>
         <h6 *ngIf="userInfo?.social_media_link?.length && isMatchesShow == false" style="margin: 0px !important;">
           <ng-container *ngIf="loggedUserInfo?.role && loggedUserInfo?.role?.includes(0); else elseTemplate">
-            <a class="mr-1" *ngFor="let item of userInfo?.social_media_link" href="{{item.url}}" target="_blank">
+            <a class="mr-1" *ngFor="let item of userInfo?.social_media_link" href="{{item.url?.includes('http' || 'https') ? item.url : '//'+item.url}}" target="_blank">
               <ng-container [ngSwitch]="item?.media">
                 <ng-container *ngSwitchCase="'youtube'">
                   <i class="fab fa-youtube-square" *ngIf="item?.visibility"></i>
@@ -90,7 +90,7 @@
           </ng-container>
           <ng-template #elseTemplate>
             <ng-container  *ngFor="let item of userInfo?.social_media_link">
-              <a class="mr-1" href="{{item.url}}" target="_blank">
+              <a class="mr-1" href="{{item.url?.includes('http' || 'https') ? item.url : '//'+item.url}}" target="_blank">
                 <ng-container *ngIf="item?.visibility == true" [ngSwitch]="item?.media">
                   <ng-container *ngSwitchCase="'youtube'">
                     <i class="fab fa-youtube-square" *ngIf="item?.visibility"></i>
