--- a/frontend/src/app/modules/features/employer/posted-job/posted-job.component.html
+++ b/frontend/src/app/modules/features/employer/posted-job/posted-job.component.html
@@ -156,7 +156,7 @@
 <ng-template #shareModal let-modal let-d="dismiss" *ngIf="isShareModel">
   <div class="modal-content">
         <div class="modal-header">
-			<h5 class="modal-title">Share with</h5>
+			<h5 class="modal-title">Share on social media</h5>
 			<button  type="button" (click)="closeshare()" class="close" data-dismiss="modal" aria-label="Close">
              <span aria-hidden="true">×</span>
 			</button>
