--- a/frontend/src/app/layout/header/header.component.html
+++ b/frontend/src/app/layout/header/header.component.html
@@ -17,14 +17,14 @@
         </ul>
         <ul class="navbar-nav ml-2" style="display: contents;">
           <li class="nav-item">
-          <a href="#" class="m-1 btn btn-sm btn-secondary"><i class="fab fa-linkedin-in"></i></a>
+          <a href="https://www.linkedin.com/" target="_blank" class="m-1 btn btn-sm btn-secondary"><i class="fab fa-linkedin-in"></i></a>
           </li>	
-          <li class="nav-item">
+          <!--<li class="nav-item">
           <a href="#" class="m-1 btn btn-sm btn-secondary"><i class="fab fa-twitter"></i></a>
           </li>	
           <li class="nav-item">
           <a href="#" class="m-1 btn btn-sm btn-secondary"><i class="fab fa-facebook-f" style="width:12.25px;"></i></a>
-          </li>	
+          </li>	-->
         </ul>
 		<ul class="navbar-nav lang-icon nav-language-66" style="top: 4rem;">
           <li class="dropdown test-{{translateService.currentLang}}">
