--- a/frontend/src/app/modules/features/employer/job-detail-view/job-detail-view.component.html
+++ b/frontend/src/app/modules/features/employer/job-detail-view/job-detail-view.component.html
@@ -38,10 +38,10 @@
                     </h5>
                   </div>
                   <div class="col-lg-5 col-md-5 col-sm-5 matches-8">
-                    <a *ngIf="loggedUserInfo?.isLoggedIn && loggedUserInfo?.role?.includes(1) && !router.url.includes('admin') && postedJobsDetails?.status != 0 " class="btn btn-smss btn-outline-warning btn-sm mr-1" [routerLink]="['/employer/post-job']" [queryParams]="{id: postedJobsDetails?.id}" href="javascript:;" title="Edit"><i class="fas fa-pencil-alt"></i> {{"shared.edit" | translate}}</a>
+                    <a *ngIf="loggedUserInfo?.isLoggedIn && loggedUserInfo?.role?.includes(1) && !router.url.includes('admin') && postedJobsDetails?.status != 0 && !router.url.includes('linkedin-share')" class="btn btn-smss btn-outline-warning btn-sm mr-1" [routerLink]="['/employer/post-job']" [queryParams]="{id: postedJobsDetails?.id}" href="javascript:;" title="Edit"><i class="fas fa-pencil-alt"></i> {{"shared.edit" | translate}}</a>
 					<a *ngIf="loggedUserInfo?.isLoggedIn &&  router.url.includes('admin') && postedJobsDetails?.status != 0 " class="btn btn-smss btn-outline-warning btn-sm mr-1" [routerLink]="['/admin/post-job/',empID]" [queryParams]="{id: postedJobsDetails?.id}" href="javascript:;" title="Edit"><i class="fas fa-pencil-alt"></i> {{"shared.edit" | translate}}</a>
                     <a class="btn btn-smss btn-outline-blue btn-sm mr-1" href="javascript:;" (click)="onToggleJDModal(true)"><i class="fas fa-file-alt"></i> {{"shared.description" | translate}}</a>
-                    <a *ngIf="loggedUserInfo?.isLoggedIn && loggedUserInfo?.role?.includes(1) && !router.url.includes('admin')&& postedJobsDetails?.status != 0" class="btn btn-smss btn-outline-green btn-sm" [routerLink]="['/employer/dashboard']" [queryParams]="{activeTab: 'matches', id: postedJobsDetails?.id}" href="javascript:;" title="Matches"><i class="fas fa-tasks"></i> {{"tabs.matches" | translate}}</a>
+                    <a *ngIf="loggedUserInfo?.isLoggedIn && loggedUserInfo?.role?.includes(1) && !router.url.includes('admin')&& postedJobsDetails?.status != 0 && !router.url.includes('linkedin-share')" class="btn btn-smss btn-outline-green btn-sm" [routerLink]="['/employer/dashboard']" [queryParams]="{activeTab: 'matches', id: postedJobsDetails?.id}" href="javascript:;" title="Matches"><i class="fas fa-tasks"></i> {{"tabs.matches" | translate}}</a>
 					<a *ngIf="loggedUserInfo?.isLoggedIn && router.url.includes('admin') && postedJobsDetails?.status != 0" class="btn btn-smss btn-outline-green btn-sm" [routerLink]="['/admin/employer-dashboard']" [queryParams]="{activeTab: 'matches', id: postedJobsDetails?.id,empids:empID}" href="javascript:;" title="Matches"><i class="fas fa-tasks"></i> {{"tabs.matches" | translate}}</a>
                   </div>
                 </div>
@@ -105,6 +105,7 @@
         </div>
         <app-shared-job-profile [jobInfo]="postedJobsDetails" [fieldsExclude]="{salary: true, visa_sponsorship: true, end_to_end_implementation: true}">
         </app-shared-job-profile>
+		<a *ngIf="router.url.includes('linkedin-share')" class="btn btn-smss btn-outline-green btn-md float-right" (click)="goNavigate()">Apply / View Job</a>
       </div>
       <div class="col-lg-4 col-md-4 matches-8" >
 		<div class="title" *ngIf="postedJobsDetails?.screening_process && postedJobsDetails?.screening_process.length">
@@ -183,13 +184,13 @@
 			</ng-container>
 			</ul>
 		</div>
-        <div class="title mt-4" *ngIf="loggedUserInfo?.isLoggedIn && (loggedUserInfo?.role?.includes(2) ||loggedUserInfo?.role?.includes(1)) && postedJobs?.length && postedJobs?.length !=1 && !postedJobs?.includes(postedJobsDetails?.id)">
+        <div class="title mt-4" *ngIf="loggedUserInfo?.isLoggedIn && (loggedUserInfo?.role?.includes(2) ||loggedUserInfo?.role?.includes(1)) && postedJobs?.length && postedJobs?.length !=1 && !postedJobs?.includes(postedJobsDetails?.id) && !router.url.includes('linkedin-share')">
           <h2>
 				{{"shared.otherposition" | translate}}        
             <!-- {{"dashboard.yourPostJobs" | translate }} -->
           </h2>
         </div>
-        <div class="sidebar-widget text-left" *ngIf="loggedUserInfo?.isLoggedIn && (loggedUserInfo?.role?.includes(2) ||loggedUserInfo?.role?.includes(1)) && postedJobs?.length && postedJobs?.length !=1 && !postedJobs?.includes(postedJobsDetails?.id)">
+        <div class="sidebar-widget text-left" *ngIf="loggedUserInfo?.isLoggedIn && (loggedUserInfo?.role?.includes(2) ||loggedUserInfo?.role?.includes(1)) && postedJobs?.length && postedJobs?.length !=1 && !postedJobs?.includes(postedJobsDetails?.id) && !router.url.includes('linkedin-share')">
           <div class="card" *ngFor="let item of postedJobs; let i=index">
             <div class="card-body p-3" *ngIf="item?.id != postedJobsDetails?.id">
               <a *ngIf="!router.url.includes('admin')" href="javascript:;" [routerLink]="['/employer/job-detail-view', 'details']" [queryParams]="{id: item?.id}" >
