bottom scroll fix

--- a/frontend/src/app/modules/features/common/landing/landing.component.html
+++ b/frontend/src/app/modules/features/common/landing/landing.component.html
@@ -38,14 +38,14 @@
 		<div class="landing-content">
 			<div class="row">	
 				<div class="col-lg-6">			
-					<div class="left-sec animate__animated  animate__fadeInLeft">					
+					<div class="left-sec animate__animated  leftfades">					
 						<h1> {{"homePage.title" | translate }}  </h1>
 						<p> {{"homePage.content1" | translate }} </p>
 						<a (click)="onRedirectUrl('/auth/employer/login')" class="btn empl-btn my-3">{{"homePage.getStarted" | translate }}</a>
 					</div>
 				</div>
 				<div class="col-lg-6">	
-					<div class="right-sec animate__animated  animate__fadeInRight">						
+					<div class="right-sec animate__animated rightfades">						
 						<h1> {{"homePage.talent" | translate }}</h1>
 						<p>{{"homePage.content2" | translate }}</p>
 						<a (click)="onRedirectUrl('/auth/user/login')"  class="btn tale-btn my-3">{{"homePage.getStarted" | translate }}</a>
