--- a/admin/src/app/pages/jobseeker/jobseeker.component.html
+++ b/admin/src/app/pages/jobseeker/jobseeker.component.html
@@ -1,4 +1,4 @@
-<div id="jspage" class="main-panel tablescreens">
+<div class="main-panel jsdatatable">
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-lg-12">
