--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,16 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
-.modal-holder{
-  animation-name: modal-animation;
-  animation-duration: 0.3s;
-}
 
 @import "~@ng-select/ng-select/themes/ant.design.theme.css";
-@import '~ngx-owl-carousel-o/lib/styles/scss/owl.carousel';
-@import '~ngx-owl-carousel-o/lib/styles/scss/owl.theme.default';
+/*@import 'ngx-owl-carousel-o/lib/styles/scss/owl.carousel';
+@import 'ngx-owl-carousel-o/lib/styles/scss/owl.theme.default';*/
 
 @keyframes modal-animation {
   0%   {transform: scale(0.5)}
   100% {transform: scale(1)}
+}
+
+.modal-holder{
+  animation-name: modal-animation;
+  animation-duration: 0.3s;
 }
 
 .required-asterisk{
