--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,8 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import "~@ng-select/ng-select/themes/ant.design.theme.css";
-/*@import 'ngx-owl-carousel-o/lib/styles/scss/owl.carousel';
-@import 'ngx-owl-carousel-o/lib/styles/scss/owl.theme.default';*/
+/*@import 'node_modules/ngx-owl-carousel-o/lib/styles/scss/owl.carousel';
+@import 'node_modules/ngx-owl-carousel-o/lib/styles/scss/owl.theme.default';*/
+
 
 @keyframes modal-animation {
   0%   {transform: scale(0.5)}
@@ -102,6 +103,10 @@ a.disabled {
 
 .search-skill.ng-select.ng-select-multiple .ng-select-container .ng-value-container .ng-placeholder {
   top: 12px !important;
+}
+
+.modal-backdrop{
+	z-index:1000 !important;
 }
 
 /* .ng-placeholder::before {
