--- a/frontend/src/app/modules/features/user/profile/create-candidate/candidate-review-modal/candidate-review-modal.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/candidate-review-modal/candidate-review-modal.component.html
@@ -661,7 +661,7 @@
 									<input placeholder="" #chipsInput
 									(onAddressChange)="handleAddressChange($event,id)"
 									[options]='options' 
-									ngx-google-places-autocomplete
+									ngx-gp-autocomplete
 										[matChipInputFor]="chipLists"
 										[matChipInputSeparatorKeyCodes]="separatorKeysCodes"
 										[matChipInputAddOnBlur]="addOnBlur"
