--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-job-preference/create-candidate-job-preference.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-job-preference/create-candidate-job-preference.component.html
@@ -107,10 +107,10 @@
 							{{addresss}}
 							<mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
 						</mat-chip>
-						<input placeholder="" #chipsInput
+						<input placeholder="" autocomplete="off" #chipsInput
 						(onAddressChange)="handleAddressChange($event)"
 						[options]='options' id="preferredLocation"
-						ngx-google-places-autocomplete
+						ngx-gp-autocomplete
 							autocomplete="disabled" 
 							[matChipInputFor]="chipList"
 							[matChipInputSeparatorKeyCodes]="separatorKeysCodes"
