--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.html
@@ -68,7 +68,7 @@
       <div class="col-lg-4 col-md-6 matches-8">
         <div class=" form-group">
           <label>{{"shared.city" | translate}}</label>
-          <input autocomplete="disabled"  autocomplete="off" appMarkAsterisk ngx-google-places-autocomplete
+          <input autocomplete="disabled"  autocomplete="off" appMarkAsterisk ngx-gp-autocomplete
           (onAddressChange)="handleAddressChange($event)"
           formControlName="city" type="text" class="form-control text-capitalize" [placeholder]="'shared.city' | translate">
           <app-control-messages [control]="f['city']"></app-control-messages>
