--- a/frontend/src/app/modules/features/employer/employer-candidate-profile-matches/employer-candidate-profile-matches.component.css
+++ b/frontend/src/app/modules/features/employer/employer-candidate-profile-matches/employer-candidate-profile-matches.component.css
@@ -26,9 +26,9 @@
     border-color: #dae0e5;
 }
 .btn-fltr-active {
-    background-color: #e2e6ea;
-    border-color: #dae0e5;
-    color: #000;
+    background-color: #4caf50;
+    border-color: #4caf50;
+    color: #ffffff;
 }
 .a-class{
 	color: #385edf;
