--- a/frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.css
+++ b/frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.css
@@ -25,10 +25,9 @@
     border-color: #dae0e5;
 }
 .btn-fltr-active {
-    background-color: #e2e6ea;
-    border-color: #dae0e5;
-   /* box-shadow: 3px 3px 3px 2px #4caf5057;*/
-    color: #000;
+    background-color: #4caf50;
+    border-color: #4caf50;
+    color: #ffffff;
 }
 .job-cards h6 {
     font-weight: 700;
