To install alternate package for time picker in frontend and update the code in post job

--- a/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.html
@@ -118,43 +118,22 @@
 			<div class=" form-group">
 				<label id="timeError">{{"shared.workTiming" | translate}}</label>
 				<div class="row mt-2">
-					<!--<div class="col-lg-6 col-md-6 ">
-						<input type="time"  formControlName="min" (change)="getValue($event,'min')" [max]="childForm['value']['jobInfo']['min']" class="form-control " >
-						<small class="text-danger" *ngIf="minError" > The start time must be lesser than the end time </small>
-					</div>
-					<div class="col-lg-6 col-md-6 ">
-						<input type="time"  formControlName="max" (change)="getValue($event,'max')" [min]="childForm['value']['jobInfo']['max']" class="form-control " >
-						<small class="text-danger" *ngIf="maxError" > The end time must be greater than the start time </small>
-					</div>-->
 					<div class="col-lg-6 col-md-6">
-							<div (click)="getValue($event,'min')"  class="chrome_display">
-							  <input type="time" formControlName="min"  value="{{min}}"  [max]="childForm['value']['jobInfo']['min']" class="form-control"><i class="fas fa-clock" style="position:absolute; top:1.2rem; right:2rem; color: #a8afb5; " ></i>
+							<div>
+							  <input [ngxTimepicker]="minPicker" style="background:transparent" placeholder="--:-- --" formControlName="min"  value="{{min}}" class="form-control" readonly><i class="fas fa-clock" style="position:absolute; top:1.2rem; right:2rem; color: #a8afb5; " ></i>
+								<ngx-material-timepicker #minPicker (timeSet)="getValue($event,'min')" ></ngx-material-timepicker>
 							  <small  class="text-danger"  *ngIf="minError" > The start time must be lesser than the end time </small>
 							  <small  class="text-danger"  *ngIf="mintimeError" > Field is required. </small>
 							 </div>
 					</div>
 					<div class="col-lg-6 col-md-6" >
-						<div (click)="getValue($event,'max')" class="chrome_display">
-						  <input type="time" formControlName="max" value="{{max}}"  [min]="childForm['value']['jobInfo']['max']" class="form-control"><i class="fas fa-clock" style="position:absolute; top:1.2rem; right:2rem; color: #a8afb5; " ></i>
+						<div>
+						<input [ngxTimepicker]="maxPicker" style="background:transparent" placeholder="--:-- --" formControlName="max"  value="{{max}}"  class="form-control" readonly><i class="fas fa-clock" style="position:absolute; top:1.2rem; right:2rem; color: #a8afb5; " ></i>
+						<ngx-material-timepicker #maxPicker (timeSet)="getValue($event,'max')" ></ngx-material-timepicker>
 						  <small  class="text-danger"  *ngIf="maxError" > The end time must be greater than the start time </small>
 						  <small  class="text-danger"  *ngIf="maxtimeError" > Field is required. </small>
 						 </div>
 					</div>
-						<div class="col-lg-6 col-md-6">
-						<div (click)="getValue($event,'min')" class="safari_only">
-						  <input type="button"  [value]="this.childForm.value.jobInfo.min | time"  formControlName="min"  [max]="childForm['value']['jobInfo']['min']" class="form-control"><i class="fas fa-clock" style="position:absolute; top:1.2rem; right:2rem; color: #a8afb5; "></i> 
-						  <small class="text-danger"  *ngIf="minError" > The start time must be lesser than the end time </small>
-						  <small  class="text-danger"  *ngIf="mintimeError" > Field is required. </small>
-						 </div>
-						</div>
-						<div class="col-lg-6 col-md-6">
-						<div (click)="getValue($event,'max')" class="safari_only">
-						  <input type="button"  [value]="this.childForm.value.jobInfo.max | time"  
-						  formControlName="max" [min]="childForm['value']['jobInfo']['max']" class="form-control"><i class="fas fa-clock" style="position:absolute; top:1.2rem; right:2rem; color: #a8afb5;"></i>
-						  <small class="text-danger"  *ngIf="maxError" > The end time must be greater than the start time </small>
-						  <small  class="text-danger"  *ngIf="maxtimeError" > Field is required. </small>
-						 </div>
-						</div>
 				</div>	
 					
 			</div>
